# ai-news-aggregator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.txt  docker-compose.yml  main.py  pyproject.toml  render.yaml  render_clean.yaml  render_test.yaml  test_youtube.py
.claude/: settings.json
Plan/: ai_news_aggregator_implementation_ed4338fc.plan.md
app/: aggregate.py  config.py
app/agents/: __init__.py  digest_agent.py  email_agent.py  ranking_agent.py  simple-openapi.py
app/database/: __init__.py  create_tables.py  drop_tables.py  insp.py  models.py  repository.py  session.py
app/jobs/: __init__.py  fetch_transcripts.py  output.md
app/profiles/: __init__.py  default_user_profile.json  loader.py
app/scrapers/: __init__.py  anthropic_news.py  base.py  openai_news.py  rss_base.py  youtube_rss.py
app/services/: __init__.py  daily_runner.py  digest_service.py  email_service.py  ranking_service.py  xml_to_markdown.py  youtube_transcript.py
docker/: docker-compose.yml
docs/: DEPLOYMENT_PLAN.md
infra/: render.yaml
